--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body{
    margin: 0;
+   margin-top: 93px;
    padding: 0;
    background-color: hsl(0, 0%, 98%);
    font-family: 'Poppins';
    font-size: 15px;
+   
 }
 
 .titre1{
